--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Фабрика Скинали</title>
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	
+	<header class="header">
+		<div class="navbar">
+			<div class="menu">
+				<div class="container">
+					<nav class="menu__nav">
+						<a href="#" class="menu__link">Главная</a>
+						<a href="#" class="menu__link">Продукция</a>
+						<a href="#" class="menu__link">Каталог</a>
+						<a href="#" class="menu__link">Примера работ</a>
+						<a href="#" class="menu__link">Примерка изображений</a>
+						<a href="#" class="menu__link">Стоимость дилерам</a>
+						<a href="#" class="menu__link">О скинали</a>
+					</nav>
+				</div>
+				<!-- /.container -->
+			</div>
+			<!-- /.menu -->
+			<div class="container">
+				<div class="navbar-wrap">
+					<button class="menu-button navbar__menu-button">
+						<span class="menu-button__line"></span>
+						<span class="menu-button__line"></span>
+						<span class="menu-button__line"></span>
+					</button>
+					<div class="logo navbar__logo">
+						<strong class="logo__text">
+							Фабрика скинали №1
+						</strong> <!-- /.logo__text -->
+						<span class="logo__desc">ведущий производитель скинали</span>
+					</div>
+					<!-- /.logo navbar__logo -->
+					<div class="navbar__mobile">
+						<a class="navbar__phone" href="tel:+30991234567">+3 099-123-45-67</a>
+						<span class="work-time">без выходных 9-21</span>
+					</div>
+					<div class="navbar__landline">
+						<a class="navbar__phone" href="tel:+30991234567">+3 449-123-45-67</a>
+						<a href="mailto:info@mail.zu" class="work-email">info@mail.zu</a>
+					</div>
+					<button class="button-o navbar__button">Получить консультацию</button>
+				</div>
+			</div>
+			<!-- /.container -->
+		</div>
+		<!-- /.navbar -->
+		<div class="hero">
+			<div class="container">
+				<h1 class="hero__title">
+					Гарантия<br> минмиальной цены<br> на скинали
+				</h1>
+				<span class="hero__subtitle">
+					от 13 000 грн.м2
+				</span>
+				<button class="button hero__button">
+					заказать скинали
+				</button>
+			</div>
+		</div>
+		<!-- /.hero -->
+	</header>
+	<!-- /.header -->
 </body>
+
 </html>
