--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 		<!-- /.hero -->
 	</header>
 	<!-- /.header -->
+	<!-- spikmi -->
+	<script type="text/javascript" src="https://spikmi.com/Widget?Id=569"></script>
 </body>
 
 </html>
