--- a/index.html
+++ b/index.html
@@ -72,6 +72,61 @@
 		<!-- /.hero -->
 	</header>
 	<!-- /.header -->
+	<main>
+		<section class="offer bg-secondary">
+			<div class="container">
+				<div class="offer__block offer-block">
+					<h2 class="offer__title">
+						Оставте заявку на расчет
+					</h2>
+					<span class="offer__subtitle">
+						И получите скидку 30% на изготовление скинали или фартука для кухни
+					</span>
+					<form class="form offer__form">
+						<div class="form__row">
+							<div class="form__group">
+								<label for="" class="form__label">Вид стекла</label>
+								<input type="text" class="input form__input">
+							</div>
+							<div class="form__group">
+								<label for="" class="form__label">Ширина, см</label>
+								<input type="text" class="input form__input">
+							</div>
+							<div class="form__group">
+								<label for="" class="form__label">Высота, см</label>
+								<input type="text" class="input form__input">
+							</div>
+						</div>
+						<div class="form__row">
+							<div class="form__checkbox">
+								<input class="checkbox" type="checkbox" id="m">
+								<label class="checkbox-label" for="m">Монтаж</label>
+							</div>
+							<div class="form__checkbox">
+								<input class="checkbox" type="checkbox" id="d">
+								<label class="checkbox-label" for="d">Доставка</label>
+							</div>
+						</div>
+						<div class="form__row">
+							<div class="form__group">
+								<input class="input form__input" type="text" placeholder="Ваше Имя">
+							</div>
+							<div class="form__group">
+								<input class="input form__input" type="tel" placeholder="Ваш телефон">
+							</div>
+							<div class="form__group">
+								<input type="submit" class="button form__button" value="Получить скидку">
+							</div>
+						</div>
+					</form>
+					<!-- /.form offer__form -->
+				</div>
+			</div>
+		</section>
+	</main>
+
+
+
 	<!-- spikmi -->
 	<script type="text/javascript" src="https://spikmi.com/Widget?Id=569"></script>
 </body>
