--- a/index.html
+++ b/index.html
@@ -123,6 +123,38 @@
 				</div>
 			</div>
 		</section>
+		<section class="features section">
+			<div class="container">
+				<h2 class="section-title">Наши преимущества</h2>
+					<div class="features-block">
+						<div class="features-block__item">
+							<img src="image/browser.svg" alt="" class="features-block__image">
+							<p class="features-block__text">Бесплатный<br> дизайн-макет</p>
+						</div>
+						<div class="features-block__item">
+							<img src="image/create.svg" alt="" class="features-block__image">
+							<p class="features-block__text">Большой каталог<br> изображений</p>
+						</div>
+						<div class="features-block__item">
+							<img src="image/internet.svg" alt="" class="features-block__image">
+							<p class="features-block__text">Пожизненная<br> гарантия</p>
+						</div>
+						<div class="features-block__item">
+							<img src="image/programming.svg" alt="" class="features-block__image">
+							<p class="features-block__text">100% <br>соблюдение сроков</p>
+						</div>
+						<div class="features-block__item">
+							<img src="image/sharing.svg" alt="" class="features-block__image">
+							<p class="features-block__text">Собственное<br> производство</p>
+						</div>
+						<div class="features-block__item">
+							<img src="image/website.svg" alt="" class="features-block__image">
+							<p class="features-block__text">Минимиальная цена в городе<br> от 1600 м2</p>
+						</div>					
+					</div>
+			</div>
+		</section>
+		<!-- /.features -->
 	</main>
 
 
