--- a/index.html
+++ b/index.html
@@ -155,6 +155,86 @@
 			</div>
 		</section>
 		<!-- /.features -->
+		<section class="section catalog">
+			<div class="container">
+				<h2 class="section-title">Каталог скинали</h2>
+				<div class="catalog-block">
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-1.jpg" alt="">
+						<span class="catalog-card__tag">коллажи</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-2.jpg" alt="">
+						<span class="catalog-card__tag">Авторская коллекция</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-3.jpg" alt="">
+						<span class="catalog-card__tag">коллажи</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-4.jpg" alt="">
+						<span class="catalog-card__tag">Авторская коллекция</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-5.jpg" alt="">
+						<span class="catalog-card__tag">коллажи</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-6.jpg" alt="">
+						<span class="catalog-card__tag">абстракция</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-7.jpg" alt="">
+						<span class="catalog-card__tag">коллажи</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+					<div class="catalog-card">
+						<img src="image/catalog/catalog-8.jpg" alt="">
+						<span class="catalog-card__tag">абстракция</span>
+						<div class="catalog-card__button">
+							<button class="button-fitting">Примерить онлайн</button>
+							<button class="button-add">Заказать</button>
+							<button class="button-like"><img src="image/heart.png" alt=""></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- /.section catalog -->
 	</main>
 
 
