--- a/index.html
+++ b/index.html
@@ -126,32 +126,32 @@
 		<section class="features section">
 			<div class="container">
 				<h2 class="section-title">Наши преимущества</h2>
-					<div class="features-block">
-						<div class="features-block__item">
-							<img src="image/browser.svg" alt="" class="features-block__image">
-							<p class="features-block__text">Бесплатный<br> дизайн-макет</p>
-						</div>
-						<div class="features-block__item">
-							<img src="image/create.svg" alt="" class="features-block__image">
-							<p class="features-block__text">Большой каталог<br> изображений</p>
-						</div>
-						<div class="features-block__item">
-							<img src="image/internet.svg" alt="" class="features-block__image">
-							<p class="features-block__text">Пожизненная<br> гарантия</p>
-						</div>
-						<div class="features-block__item">
-							<img src="image/programming.svg" alt="" class="features-block__image">
-							<p class="features-block__text">100% <br>соблюдение сроков</p>
-						</div>
-						<div class="features-block__item">
-							<img src="image/sharing.svg" alt="" class="features-block__image">
-							<p class="features-block__text">Собственное<br> производство</p>
-						</div>
-						<div class="features-block__item">
-							<img src="image/website.svg" alt="" class="features-block__image">
-							<p class="features-block__text">Минимиальная цена в городе<br> от 1600 м2</p>
-						</div>					
+				<div class="features-block">
+					<div class="features-block__item">
+						<img src="image/browser.svg" alt="" class="features-block__image">
+						<p class="features-block__text">Бесплатный<br> дизайн-макет</p>
 					</div>
+					<div class="features-block__item">
+						<img src="image/create.svg" alt="" class="features-block__image">
+						<p class="features-block__text">Большой каталог<br> изображений</p>
+					</div>
+					<div class="features-block__item">
+						<img src="image/internet.svg" alt="" class="features-block__image">
+						<p class="features-block__text">Пожизненная<br> гарантия</p>
+					</div>
+					<div class="features-block__item">
+						<img src="image/programming.svg" alt="" class="features-block__image">
+						<p class="features-block__text">100% <br>соблюдение сроков</p>
+					</div>
+					<div class="features-block__item">
+						<img src="image/sharing.svg" alt="" class="features-block__image">
+						<p class="features-block__text">Собственное<br> производство</p>
+					</div>
+					<div class="features-block__item">
+						<img src="image/website.svg" alt="" class="features-block__image">
+						<p class="features-block__text">Минимиальная цена в городе<br> от 1600 м2</p>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- /.features -->
@@ -232,9 +232,49 @@
 						</div>
 					</div>
 				</div>
+				<div class="catalog__link">
+					<a href="#" class="button catalog__link-more button_lg">Смотреть весь каталог скинали</a>
+				</div>
+				<span class="catalog__description">Болле 3000 изображений скинали в 25 рубриках</span>
+
 			</div>
 		</section>
 		<!-- /.section catalog -->
+		<section class="section blog">
+			<div class="container">
+				<div class="blog__heading">
+					<h3 class="blog__title">Полезное или что важно знать о скинали...</h3>
+					<a href="#" class="blog__link-more">Читать все статьи</a>
+				</div>
+				<div class="blog-list">
+					<blog-card class="blog-list__card">
+						<div class="blog-list__image">
+							<img src="image/blog/blog-1.jpg" alt="">
+						</div>
+						<div class="blog-list__text">Виды стекла</div>
+					</blog-card>
+					<blog-card class="blog-list__card">
+						<div class="blog-list__image">
+							<img src="image/blog/blog-2.jpg" alt="">
+						</div>
+						<div class="blog-list__text">Виды печати</div>
+					</blog-card>
+					<blog-card class="blog-list__card">
+						<div class="blog-list__image">
+							<img src="image/blog/blog-3.jpg" alt="">
+						</div>
+						<div class="blog-list__text">Виды крепежа и монтажа</div>
+					</blog-card>
+					<blog-card class="blog-list__card">
+						<div class="blog-list__image">
+							<img src="image/blog/blog-4.jpg" alt="">
+						</div>
+						<div class="blog-list__text">Вопросы и ответы</div>
+					</blog-card>
+				</div>
+			</div>
+		</section>
+		<!-- /.section blog-list -->
 	</main>
 
 
