--- a/index.html
+++ b/index.html
@@ -275,6 +275,128 @@
 			</div>
 		</section>
 		<!-- /.section blog-list -->
+		<section class="section price">
+			<div class="container">
+				<h2 class="section-title section__title">Цены и виды скинали</h2>
+				<!-- /.section-title section__title -->
+				<div class="price-block">
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-1.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">Прозрачные</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-2.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">Одноцветные</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-3.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">Полноцветные</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-4.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">Стекло "Optiwite"</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-5.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">Зеркальные</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-6.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">С подсветкой</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-7.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">Световые панели</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+					<div class="price-block__card">
+						<div class="price-block__img">
+							<img src="image/price/price-8.jpg" alt="">
+						</div>
+						<div class="price-block__text">
+							<div class="price-block__pricetag">
+								<h4 class="price-block__title">Панно, картины</h4>
+								<span class="price-block__cost">от 3500 за м2</span>
+							</div>
+							<div class="price-block__button">
+								<button class="button">Оставить заявку</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- /.container -->
+		</section>
+		<!-- /.section price -->
 	</main>
 
 
