--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			</div>
 		</section>
 		<!-- /.features -->
-		<section class="section catalog">
+		<section class="section catalog bg">
 			<div class="container">
 				<h2 class="section-title">Каталог скинали</h2>
 				<div class="catalog-block">
@@ -397,6 +397,162 @@
 			<!-- /.container -->
 		</section>
 		<!-- /.section price -->
+		<section class="section steps bg">
+			<div class="container">
+				<h2 class="section-title">
+					Этапы работ
+				</h2>
+				<div class="steps-block">
+					<div class="step">
+						<div class="step__img">
+							<img src="image/steps/step-1.png" alt="">
+							<div class="step__title">Заявка</div>
+							<p class="step__text">
+								Вы оставляете заявку на нашем сайте или по телефону
+							</p>
+						</div>
+					</div>
+					<div class="step">
+						<div class="step__img">
+							<img src="image/steps/step-2.png" alt="">
+							<div class="step__title">Замер</div>
+							<p class="step__text">
+								Вы оставляете заявку на нашем сайте или по телефону
+							</p>
+						</div>
+					</div>
+					<div class="step">
+						<div class="step__img">
+							<img src="image/steps/step-3.png" alt="">
+							<div class="step__title">Договор</div>
+							<p class="step__text">
+								Вы оставляете заявку на нашем сайте или по телефону
+							</p>
+						</div>
+					</div>
+					<div class="step">
+						<div class="step__img">
+							<img src="image/steps/step-4.png" alt="">
+							<div class="step__title">Дизайн</div>
+							<p class="step__text">
+								Вы оставляете заявку на нашем сайте или по телефону
+							</p>
+						</div>
+					</div>
+					<div class="step">
+						<div class="step__img">
+							<img src="image/steps/step-5.png" alt="">
+							<div class="step__title">Производство</div>
+							<p class="step__text">
+								Вы оставляете заявку на нашем сайте или по телефону
+							</p>
+						</div>
+					</div>
+					<div class="step">
+						<div class="step__img">
+							<img src="image/steps/step-6.png" alt="">
+							<div class="step__title">Монтаж</div>
+							<p class="step__text">
+								Вы оставляете заявку на нашем сайте или по телефону
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section reviews bg">
+			<div class="container">
+				<h2 class="section-title">Отзывы наших клиентов</h2>
+				<div class="reviews-slider">
+					<div class="reviews-slider__item">
+						<div class="reviews-slider__text">
+								Равным образом новая модель организационной деятельности представляет собой интересный эксперимент проверки новых предложений обучения.
+						</div>
+						<div class="reviews-slider__img">
+							<img src="image/review/review-1.jpg" alt="">
+						</div>
+						<span class="reviews-slider__name">Екатерина Иванова Москва</span>
+					</div>
+					<div class="reviews-slider__item">
+						<div class="reviews-slider__text">
+								Не следует, однако забывать, что консультация с широким активом представляет собой интересный эксперимент проверки системы обучения кадров. 
+						</div>
+						<div class="reviews-slider__img">
+							<img src="image/review/review-2.jpg" alt="">
+						</div>
+						<span class="reviews-slider__name">Марина Петрова Воронеж</span>
+					</div>
+					<div class="reviews-slider__item">
+						<div class="reviews-slider__text">
+								С другой стороны постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по разработке систем массового участия. 
+						</div>		
+						<div class="reviews-slider__img">
+							<img src="image/review/review-3.jpg" alt="">
+						</div>
+						<span class="reviews-slider__name">Игорь Сидоров Уфа</span>
+					</div>
+				</div>
+				<!-- /.section-title -->
+			</div>
+			<!-- /.container -->
+		</section>
+		<!-- /.section reviews bg -->
+		<section class="offer secondary bg">
+			<div class="container">
+				<div class="offer__block offer-block">
+					<h2 class="offer__title">
+						Ищете где дешевле и лучше?
+					</h2>
+					<span class="offer__subtitle">
+						И если у Вас уже есть расчет от другой фирмы, но вы хотите цену дешевле, укажите ее и мы пересчитаем заказ с максимальной скидкой.
+					</span>
+					<form class="form offer__form">
+						<div class="form__row">
+							<div class="form__group">
+								<input type="text" class="input form__input" placeholder="Ваше Имя">
+							</div>
+							<div class="form__group">
+								<input type="text" class="input form__input" placeholder="Ваш телефон">
+							</div>
+							<div class="form__group">
+								<input type="text" class="input form__input" placeholder="Ваша цена">
+							</div>
+						</div>
+						<div class="form__row">
+							<div class="form__group">
+								<input type="submit" class="button form__button" value="Получить расчет со скидкой">
+							</div>
+							<div class="form__group">
+								<span class="form__policy">Ваши данные защищены. <br>Отправленные заявки ни к чему не обязывают</span>
+							</div>
+						</div>
+					</form>
+					<!-- /.form offer__form -->
+				</div>
+			</div>
+		</section>
+		<section class="section factory">
+			<div class="container">
+				<h2 class="section-title">О производстве</h2>
+				<div class="factory-block">
+					<div class="factory-block__img">
+							<img src="image/factory/factory.jpg" alt="" >
+						</div>
+					<div class="factory-block__text">
+						<p>
+								Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, nesciunt est veniam amet ex repellat molestias dolores veritatis voluptatem a. Iste nihil sunt, ad molestiae debitis blanditiis aliquam molestias voluptas, ad molestiae debitis blanditiis aliquam molestias voluptas?
+						</p>	
+						<p>
+							Ipsum dolor sit amet consectetur adipisicing 
+									elit. Ab quos vero a similique minus aliquam amet perferendis alias non. Unde id fugiat reiciendis maxime blanditiis deserunt quo assumenda nam earum reiciendis maxime blanditiis deserunt quo assumenda nam earum.
+						</p>
+					</div>
+				</div>
+				<!-- /.section-title -->
+			</div>
+			<!-- /.container -->
+		</section>
+		<!-- /.section factory -->
 	</main>
 
 
