add any sections and footer

--- a/index.html
+++ b/index.html
@@ -466,7 +466,8 @@
 				<div class="reviews-slider">
 					<div class="reviews-slider__item">
 						<div class="reviews-slider__text">
-								Равным образом новая модель организационной деятельности представляет собой интересный эксперимент проверки новых предложений обучения.
+							Равным образом новая модель организационной деятельности представляет собой интересный эксперимент
+							проверки новых предложений обучения.
 						</div>
 						<div class="reviews-slider__img">
 							<img src="image/review/review-1.jpg" alt="">
@@ -475,7 +476,8 @@
 					</div>
 					<div class="reviews-slider__item">
 						<div class="reviews-slider__text">
-								Не следует, однако забывать, что консультация с широким активом представляет собой интересный эксперимент проверки системы обучения кадров. 
+							Не следует, однако забывать, что консультация с широким активом представляет собой интересный эксперимент
+							проверки системы обучения кадров.
 						</div>
 						<div class="reviews-slider__img">
 							<img src="image/review/review-2.jpg" alt="">
@@ -484,8 +486,9 @@
 					</div>
 					<div class="reviews-slider__item">
 						<div class="reviews-slider__text">
-								С другой стороны постоянный количественный рост и сфера нашей активности позволяет выполнять важные задания по разработке систем массового участия. 
-						</div>		
+							С другой стороны постоянный количественный рост и сфера нашей активности позволяет выполнять важные
+							задания по разработке систем массового участия.
+						</div>
 						<div class="reviews-slider__img">
 							<img src="image/review/review-3.jpg" alt="">
 						</div>
@@ -504,7 +507,8 @@
 						Ищете где дешевле и лучше?
 					</h2>
 					<span class="offer__subtitle">
-						И если у Вас уже есть расчет от другой фирмы, но вы хотите цену дешевле, укажите ее и мы пересчитаем заказ с максимальной скидкой.
+						И если у Вас уже есть расчет от другой фирмы, но вы хотите цену дешевле, укажите ее и мы пересчитаем заказ с
+						максимальной скидкой.
 					</span>
 					<form class="form offer__form">
 						<div class="form__row">
@@ -536,15 +540,18 @@
 				<h2 class="section-title">О производстве</h2>
 				<div class="factory-block">
 					<div class="factory-block__img">
-							<img src="image/factory/factory.jpg" alt="" >
-						</div>
+						<img src="image/factory/factory.jpg" alt="">
+					</div>
 					<div class="factory-block__text">
 						<p>
-								Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, nesciunt est veniam amet ex repellat molestias dolores veritatis voluptatem a. Iste nihil sunt, ad molestiae debitis blanditiis aliquam molestias voluptas, ad molestiae debitis blanditiis aliquam molestias voluptas?
-						</p>	
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, nesciunt est veniam amet ex repellat
+							molestias dolores veritatis voluptatem a. Iste nihil sunt, ad molestiae debitis blanditiis aliquam
+							molestias voluptas, ad molestiae debitis blanditiis aliquam molestias voluptas?
+						</p>
 						<p>
-							Ipsum dolor sit amet consectetur adipisicing 
-									elit. Ab quos vero a similique minus aliquam amet perferendis alias non. Unde id fugiat reiciendis maxime blanditiis deserunt quo assumenda nam earum reiciendis maxime blanditiis deserunt quo assumenda nam earum.
+							Ipsum dolor sit amet consectetur adipisicing
+							elit. Ab quos vero a similique minus aliquam amet perferendis alias non. Unde id fugiat reiciendis maxime
+							blanditiis deserunt quo assumenda nam earum reiciendis maxime blanditiis deserunt quo assumenda nam earum.
 						</p>
 					</div>
 				</div>
@@ -553,7 +560,82 @@
 			<!-- /.container -->
 		</section>
 		<!-- /.section factory -->
+		<section class="section contacts bg">
+			<div class="container">
+				<h2 class="section-title">Контакты</h2>
+				<div class="contacts-block">
+					<div class="contacts-block__item">
+						<img src="image/contacts/contact-1.png" alt="" class="contacts-block__img">
+						<a href="#" class="contacts-block__link">+1 234 567 789 89</a>
+					</div>
+					<div class="contacts-block__item">
+						<img src="image/contacts/contact-2.png" alt="" class="contacts-block__img">
+						<a href="#" class="contacts-block__link">Серопольское шоссе а22 офис 512</a>
+					</div>
+					<div class="contacts-block__item">
+						<img src="image/contacts/contact-3.png" alt="" class="contacts-block__img">
+						<a href="#" class="contacts-block__link">info@mail.com.ua</a>
+					</div>
+				</div>
+			</div>
+			<div class="map">
+				<!-- Этот блок кода нужно вставить в ту часть страницы, где вы хотите разместить карту (начало) -->
+				<div style="width: auto;height: 410px" id="mapey2mbzzc"></div>
+				<script>function YandexReadyHandlerey2mbzzc() {
+						var map = new ymaps.Map("mapey2mbzzc", {
+							center: [55.657499069087756, 37.64521350000002],
+							zoom: 17,
+							controls: ["zoomControl", "typeSelector"],
+							type: "yandex#map"
+						}, {
+								suppressMapOpenBlock: true
+							});
+						return map;
+					}</script>
+				<script src="//api-maps.yandex.ru/2.1/?lang=ru&onload=YandexReadyHandlerey2mbzzc"
+					type="text/javascript"></script>
+				<div style="text-align: right;"><a href="https://maps-creator.com" target="_blank"
+						style="color: #507fe1; font: 13px Arial, Helvetica, sans-serif;">создано с помощью конструктора
+						maps-creator.com</a></div>
+				<!-- Этот блок кода нужно вставить в ту часть страницы, где вы хотите разместить карту (конец) -->
+			</div>
+		</section>
+		<!-- /.sction contacts -->
+		<section class="section questions">
+			<div class="container">
+				<div class="questions-block">
+						<h3 class="questions__title">Остались вопросы?</h3>
+						<a href="#" class="questions__link">Задайте их менеджеру</a>
+				</div>
+			</div>
+		</section>
 	</main>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer-block">
+				<div class="footer__description">
+					<h4 class="footer__title">Фабрика скинали №1</h4>
+					<span class="footer__subtitle">Ведущий производитель скинали</span>
+					<span class="footer__copyright">&copy; Фабрика скинали №1</span>
+				</div>
+				<div class="footer__pay-info">
+					<img src="image/pay/credit-card.png" alt="" class="footer__pay-logo">
+					<img src="image/pay/mastercard.png" alt="" class="footer__pay-logo">
+					<img src="image/pay/visa.png" alt="" class="footer__pay-logo">
+					<img src="image/pay/webmoney-paying-logo.png" alt="" class="footer__pay-logo">
+				</div>
+				<div class="footer__contacts">
+					<a href="#" class="footer__phone">+1 123 345 56 78</a>
+					<a href="#" class="footer__mail">info@mail.com.ua</a>
+					<div class="footer-social">
+						<a href="#" class="footer-social__link"><img src="image/social/vk.png" alt=""></a>
+						<a href="#" class="footer-social__link"><img src="image/social/facebook.png" alt=""></a>
+						<a href="#" class="footer-social__link"><img src="image/social/twitter.png" alt=""></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 
